package com.directi.training.dip.exercice_refactored;

public interface Database {
    public int write(String inputString);
}
