@startuml
'https://plantuml.com/class-diagram

interface Database
class MyDatabase
class EncodingModule
class EncodingModuleClient

interface Database{
+ write(inputString : String) : int
}

class MyDatabase{
- {static} _data : Map<Integer, String>
- {static} _count = 0
+ write(inputString : String) : int
}

class EncodingModule{
+ encodeWithFiles() : void
+ encodeBasedOnNetworkAndDatabase() : void
}

class EncodingModuleClient{}

EncodingModuleClient ..> EncodingModule
EncodingModule ..> Database
MyDatabase ..|> Database
@enduml